zim/load-balancer/lb-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: zim
  labels:
    app: lb-db
  name: lb-db-sts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lb-db
  serviceName: lb-db-service
  template:
    metadata:
      labels:
        app: lb-db
    spec:
      securityContext:
        fsGroup: 999
        runAsUser: 999
        runAsGroup: 999
      containers:
      - image: docker.io/library/postgres:18.4
        imagePullPolicy: IfNotPresent
        name: postgres
        args: ["postgres", "-c", "shared_buffers=256MB", "-c", "max_connections=200"]
        volumeMounts:
        - name: data-volume
          subPath: data
          mountPath: "/var/lib/postgresql/18/docker"
          readOnly: false
        - mountPath: /dev/shm
          name: devshm
        ports:
        - containerPort: 5432
        resources:
          requests:
            memory: "1Gi"
            cpu: "200m"
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: dlsvc-mirrorbrain-db-pvc
      - name: devshm
        emptyDir:
          medium: Memory
      nodeSelector:
        k8s.kiwix.org/role: "dlservices"
---
apiVersion: v1
kind: Service
metadata:
  namespace: zim
  name: lb-db-service
  labels:
    app: lb-db
spec:
  selector:
    app: lb-db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
